# kde-frameworks-rs

./: Cargo.toml  LICENSE  README.md  README.tpl  build.rs
.github/workflows/: rust.yml
src/: helpers.rs  kf5_config.rs  lib.rs
