[package]
name = "kde_frameworks"
description = "A crate containing useful methods for wrapping KDE Frameworks"
author = ["Ayush Singh <ayushdevel1325@gmail.com>"]
version = "0.1.1"
edition = "2021"
build = "build.rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ayush1325/kde-frameworks-rs"
keywords = ["KDE", "kde"]

[dependencies]
semver = "1.0"

[build-dependencies]
semver = "1.0"
